--- a/ch02/ch02_1/package.json
+++ b/ch02/ch02_1/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "ch01_5",
+  "name": "ch02_1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^16.18.120",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "chance": "^1.1.12",
@@ -40,24 +42,8 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@4.5.3",
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@testing-library/jest-dom": "^6.6.3",
     "@types/chance": "^1.1.6",
-    "@types/jest": "^29.5.14",
-    "@types/luxon": "^3.4.2",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "eslint": "8.46.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
-    "globals": "^15.12.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.4.1",
-    "ts-jest": "^29.2.5",
-    "typescript-eslint": "^8.16.0"
+    "@types/luxon": "^3.4.2"
   }
 }
